# pybind11_tutorial

./: CMakeLists.txt  demo.py  python_pybind11_visual_guide.md
.claude/: settings.json
examples/12_minimal_binding/: CMakeLists.txt  demo.py
examples/12_minimal_binding/src/: bindings.cpp
examples/17_class_binding/: CMakeLists.txt  demo.py
examples/17_class_binding/src/: bindings.cpp  point.cpp  point.h
examples/18_lifetime/: CMakeLists.txt  build.sh  demo.py
examples/18_lifetime/src/: bindings.cpp  pet_store.cpp  pet_store.h
examples/19_exceptions/: CMakeLists.txt  demo.py
examples/19_exceptions/src/: bindings.cpp
examples/20_trampoline/: CMakeLists.txt  demo.py
examples/20_trampoline/src/: animal.h  animal_pure.h  bindings.cpp  describe.cpp  describe.h  describe_pure.h  py_animal_pure_trampoline.h  py_animal_trampoline.h
examples/21_gil/: CMakeLists.txt  demo.py
examples/21_gil/src/: bindings.cpp
examples/22_zero_copy/: CMakeLists.txt  demo.py
examples/22_zero_copy/src/: bindings.cpp
examples/23_reinvent_minimal_binding/: CMakeLists.txt  demo.py
examples/23_reinvent_minimal_binding/src/: module.c
src/: bindings.cpp  describe_pure.cpp  py_animal_trampoline.h
