cmake_minimum_required(VERSION 3.16)
project(pybind11_visual_guide_examples LANGUAGES C CXX)

add_subdirectory(examples/12_minimal_binding)
add_subdirectory(examples/17_class_binding)
add_subdirectory(examples/18_lifetime)
add_subdirectory(examples/19_exceptions)
add_subdirectory(examples/20_trampoline)
add_subdirectory(examples/21_gil)
add_subdirectory(examples/22_zero_copy)
add_subdirectory(examples/23_reinvent_minimal_binding)
